feat(gamification): add badges and user badges enpoints added with their utilities
