# src/modules/gamification/gamification.controller.ts
@@ -1,4 +1,13 @@
-import { Body, Controller, HttpCode, HttpStatus, Patch } from '@nestjs/common';
+import {
+  BadRequestException,
+  Body,
+  Controller,
+  HttpCode,
+  HttpStatus,
+  Patch,
+  Post,
+  UseFilters,
+} from '@nestjs/common';
 import { GamificationService } from './gamification.service';
 import { GetCurrentUser } from '../auth/ParamDecorator';
 import { PointsDto } from './dto/points.dto';
@@ -13,6 +22,13 @@ import { swaggerSuccessExample } from '../../utils/swagger/example-generator';
 import { PointsExample } from './swagger-examples/points.example';
 import { ErrorScheme } from '../study-planner/swagger-examples/error.example';
 import { sendSuccessResponse } from 'src/utils/response-handler/success.response-handler';
+import { BadgesExample } from './swagger-examples/badges.example';
+import { BadgeDto, UserBadgeDto } from './dto/badges.dto';
+import {
+  SerializedBadge,
+  SerializedUserBadge,
+} from './serialized-types/serialized-badges';
+import { PrismaExceptionFilter } from 'src/exception-filters/prisma.filter';
 
 @ApiTags('gamification')
 @Controller('gamification')
@@ -36,9 +52,50 @@ export class GamificationController {
     @Body() pointsDto: PointsDto,
     @GetCurrentUser('user_id') userId: number,
   ) {
+    const user = await this.gamificationService.changePoints(userId, pointsDto);
+    if (user) return sendSuccessResponse(new SerializedPoints(user));
+    else throw new BadRequestException('Error adding points');
+  }
+
+  // TODO: Maybe in here or in a separate controller for badges
+  @Post('add-badge')
+  @HttpCode(HttpStatus.OK)
+  @HttpCode(HttpStatus.BAD_REQUEST)
+  @ApiOperation({ summary: 'Add a badge' })
+  @ApiOkResponse({
+    description: 'Badge added successfully',
+    schema: swaggerSuccessExample(null, BadgesExample),
+  })
+  @ApiBadRequestResponse({
+    description: 'Bad Request',
+    schema: swaggerSuccessExample(null, ErrorScheme),
+  })
+  async addBadge(@Body() badgeDto: BadgeDto) {
     return sendSuccessResponse(
-      new SerializedPoints(
-        await this.gamificationService.changePoints(userId, pointsDto),
+      new SerializedBadge(await this.gamificationService.addBadge(badgeDto)),
+    );
+  }
+
+  // TODO: put it in user controller
+  @Post('add-user-badge')
+  @HttpCode(HttpStatus.OK)
+  @HttpCode(HttpStatus.BAD_REQUEST)
+  @ApiOperation({ summary: 'Add a badge to a certain user' })
+  @ApiOkResponse({
+    description: 'Badges added successfully',
+    schema: swaggerSuccessExample(null, BadgesExample),
+  })
+  @ApiBadRequestResponse({
+    description: 'Bad Request',
+    schema: swaggerSuccessExample(null, ErrorScheme),
+  })
+  async addBadges(
+    @Body() badgeDto: UserBadgeDto,
+    @GetCurrentUser('user_id') userId: number,
+  ) {
+    return sendSuccessResponse(
+      new SerializedUserBadge(
+        await this.gamificationService.addUserBadge(userId, badgeDto),
       ),
     );
   }
